--- a/source.qrc
+++ b/source.qrc
@@ -18,5 +18,8 @@
         <file>snooze.jpg</file>
         <file>Luminescence.wav</file>
         <file>Luminescence.png</file>
+        <file>夢幻.png</file>
+        <file>夢幻.wav</file>
+        <file>判定线2.png</file>
     </qresource>
 </RCC>
